@@ -18,9 +18,6 @@
         <junit-jupiter.version>5.3.2</junit-jupiter.version>
         <maven-jacoco-plugin.version>0.8.3</maven-jacoco-plugin.version>
         <maven-surefire.version>2.22.1</maven-surefire.version>
-        <argline>-server -Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
-            -Djava.net.preferIPv4Stack=true
-        </argline>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     </properties>
     <dependencyManagement>
@@ -88,7 +85,6 @@
                 <configuration>
                     <useSystemClassLoader>true</useSystemClassLoader>
                     <forkMode>once</forkMode>
-                    <argLine>${jacocoArgLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
